fix(video): fix frameset broken layout

--- a/app/function/video/video.scss
+++ b/app/function/video/video.scss
@@ -35,6 +35,8 @@
 
 .player {
   width: 700rpx;
+  // A fix for pc frameset layout
+  max-width: 92%;
   max-height: 400rpx;
   margin: 20px auto;
   border-radius: 16rpx;
